# crewdock

./: .dockerignore  .env.dev  .env.example  .env.prod.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Caddyfile  Dockerfile  GEMINI.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  WORKFLOW.md  compose.dev.yml  compose.yml  docker-compose.yml  package-lock.json  package.json
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 64b18bb3f4ca_initial.py  ec52a1ed17e8_initial_schema.py  f3a40b5ea5ca_add_system_prompt.py
backend/app/: main.py
backend/app/api/: activity.py  agents.py  approvals.py  auth.py  chat.py  costs.py  events.py  gateway.py  health.py  knowledge.py  mcp.py  plugins.py  scheduler.py  skills.py  tasks.py  webhooks.py
backend/app/core/: config.py  database.py  events.py  security.py
backend/app/models/: __init__.py  activity.py  agent.py  approval.py  cost.py  mcp_server.py  plugin.py  skill.py  task.py  user.py  webhook.py  workspace.py
backend/app/plugins/: base.py  loader.py
backend/app/schemas/: activity.py  agent.py  approval.py  chat.py  cost.py  knowledge.py  plugin.py  skill.py  task.py  webhook.py
backend/app/services/: activity_logger.py  auth_service.py  chat_history.py  cost_tracker.py  knowledge_context.py  llm_service.py  mcp_client.py  qmd_client.py  scheduler.py  telegram_bot.py  tool_chat.py  webhook_dispatcher.py
backend/app/services/gateway/: base.py  openclaw.py  registry.py
backend/tests/: test_agents.py  test_api_schema.py  test_health.py  test_phase3_schema.py  test_task_transitions.py
deploy/: 01-create-vm.sh  (+6 more)
(+127 files in other folders)
